# ask-ai

./: .flake8  .gitignore  README.md  README_ar.md  README_es.md  README_fa.md  README_ja.md  README_ru.md  README_tr.md  README_zh.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
ask_ai/: __init__.py  base.py  cli.py  config.py  exceptions.py  media.py  requirements.txt  utils.py
ask_ai/providers/: __init__.py  anthropic_provider.py  azure_provider.py  google_provider.py  groq_provider.py  openai_provider.py  openrouter_provider.py
docs/: PYPI_README.md  README_ar.md  README_es.md  README_fa.md  README_ja.md  README_ru.md  README_tr.md  README_zh.md
easyai/: __init__.py  exceptions.py
examples/: example_usage.py
scripts/: update_docs.py
tests/: __init__.py  test_core.py
