[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "askai-python"
version = "0.3.3"
description = "AI Made Stupid Simple. Unified API for OpenAI, Groq, Google, and more."
readme = "docs/PYPI_README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Hossein Ghorbani", email = "hosseingh1068@gmail.com"}
]
dependencies = [
  "openai>=1.0.0",
  "groq",
  "google-generativeai",
  "anthropic",
  "requests",
  "Pillow"
]

[project.urls]
"Homepage" = "https://hosseinghorbani0.ir/"
"Bug Tracker" = "https://github.com/Hosseinghorbani0/ask-ai/issues"

[tool.setuptools.packages.find]
include = ["ask_ai*"]
exclude = ["assets*", "docs*", "tests*", ".gemini*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]
